--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
-<h1>Hello World!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Currículo - Vinicius Saran Nascimento</title>
+
+	<link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+	<div class="wrapper">
+		<h1>Vinicius Saran Nascimento</h1>
+		<p>Brasileiro, solteiro, 22 anos.</p>
+		<address>Avenida Francisco Jesualdi, 188. <br>
+		Poços de Caldas - MG.</address>
+		<p>Telefone: (35) 9193-1054.</p>
+		<p>E-mail: viniciussaran@gmail.com.</p>
+
+		<h2>Objetivo</h2>
+		<p>Desenvolvedor Front-End</p>
+
+		<h2>Formação</h2>
+		<ul>
+			<li><p>Sistemas de Informação, UNIFAE, conclusão em 2014.</p></li>
+			<li><p>Técnico em Informática, Centro Paula Souza, conclusão em 2009.</p></li>
+		</ul>
+
+		<h2>Experiência Profissional</h2>
+		<ul class="professional-experience">
+			<li>
+				<h3>2014-Atualmente - NGA Corp</h3>
+				<p>Cargo: Desenvolvedor Web</p>
+				<p>Principais atividades: Desenvolvimento de aplicativos Cross-Platform e sistemas Web utilizando as tecnologias HTML/HTML5, CSS/CSS3, Javascript/JQuery, Ajax, PHP e MySQL. Photoshop e Fireworks para recorte de imagens e medidas.</p>
+			</li>
+			<li>
+				<h3>Março 2013-Dezembro 2013 - Webgoal</h3>
+				<p>Cargo: Estagiário - Desenvolvedor Web.</p>
+				<p>Principais atividades: Desenvolvimento de softwares para a universidade, utilizando as metodologias ágeis Scrum, Kanban e XP.</p>
+				<p>Principal projeto: sistema de gerenciamento de projetores multimídia.</p>
+			</li>
+			<li>
+				<h3>2011-2013 - EFAP(Escola de Formação e Aperfeiçoamento de Professores</h3>
+				<p>Cargo: Estagiário.</p>
+				<p>Principais atividades: Monirotamento de videoconferências, testes em equipamentos, instalação de softwares e configuração de rede cabeada e wireless em notebooks e desktops.</p>
+			</li>
+		</ul>
+
+		<h2>Qualificações e Atividades Complementares</h2>
+		<ul>
+			<li><p>Antenado nas tecnologias Front-End: AngularJS, Bower, Yeoman, Grunt.</p></li>
+			<li><p>Bom conhecimento em Sass/Less.</p></li>
+			<li><p>Conhecimento intermediário/avançado em Twitter Bootstrap.</p></li>
+			<li><p>Inglês avançado</p></li>
+			<li><p>Participação em três maratonas regionais de programação(ACM-ICPC), representando a universidade.</p></li>
+		</ul>
+
+		<h2>Informações adicionais</h2>
+		<ul>
+			<li><p>Disponibilidade para mudança de cidade ou estado</p></li>
+		</ul>
+	</div>
+</body>
+</html>
