--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Currículo - Vinicius Saran Nascimento</title>
 
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 	<div class="wrapper">
