--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
 
 		<h2>Qualificações e Atividades Complementares</h2>
 		<ul>
+			<li><p>Experiência com HTML/HTML5, CSS/CSS3, Javascript/JQuery, PHP, MySQL, design
+				responsivo, semântica, cross-browser, Twitter Bootstrap, mobile apps.</p></li>
 			<li><p>Antenado nas tecnologias Front-End: AngularJS, Bower, Yeoman, Grunt.</p></li>
 			<li><p>Bom conhecimento em Sass/Less.</p></li>
-			<li><p>Conhecimento intermediário/avançado em Twitter Bootstrap.</p></li>
 			<li><p>Inglês avançado</p></li>
 			<li><p>Participação em três maratonas regionais de programação(ACM-ICPC), representando a universidade.</p></li>
 		</ul>
