--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 		<h2>Qualificações e Atividades Complementares</h2>
 		<ul>
-			<li><p>Experiência com HTML/HTML5, CSS/CSS3, Javascript/JQuery, PHP, MySQL, design
+			<li><p>Experiência em HTML/HTML5, CSS/CSS3, Javascript/JQuery, PHP, MySQL, design
 				responsivo, semântica, cross-browser, Twitter Bootstrap, mobile apps.</p></li>
 			<li><p>Antenado nas tecnologias Front-End: AngularJS, Bower, Yeoman, Grunt.</p></li>
 			<li><p>Bom conhecimento em Sass/Less.</p></li>
