--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 		<ul>
 			<li><p>Experiência em HTML/HTML5, CSS/CSS3, Javascript/JQuery, PHP, MySQL, design
 				responsivo, semântica, cross-browser, Twitter Bootstrap, mobile apps.</p></li>
+			<li><p>Photoshop e Fireworks para recorte.</p></li>
 			<li><p>Antenado nas tecnologias Front-End: AngularJS, Bower, Yeoman, Grunt.</p></li>
 			<li><p>Bom conhecimento em Sass/Less.</p></li>
 			<li><p>Inglês avançado</p></li>
