--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<ul class="professional-experience">
 			<li>
 				<h3>2014-Atualmente - NGA Corp</h3>
-				<p>Cargo: Desenvolvedor Web</p>
+				<p>Cargo: Desenvolvedor Web.</p>
 				<p>Principais atividades: Desenvolvimento de aplicativos Cross-Platform e sistemas Web utilizando as tecnologias HTML/HTML5, CSS/CSS3, Javascript/JQuery, Ajax, PHP e MySQL. Photoshop e Fireworks para recorte de imagens e medidas.</p>
 			</li>
 			<li>
@@ -51,13 +51,14 @@
 			<li><p>Photoshop e Fireworks para recorte.</p></li>
 			<li><p>Antenado nas tecnologias Front-End: AngularJS, Bower, Yeoman, Grunt.</p></li>
 			<li><p>Bom conhecimento em Sass/Less.</p></li>
-			<li><p>Inglês avançado</p></li>
+			<li><p>Inglês avançado.</p></li>
 			<li><p>Participação em três maratonas regionais de programação(ACM-ICPC), representando a universidade.</p></li>
 		</ul>
 
 		<h2>Informações adicionais</h2>
 		<ul>
-			<li><p>Disponibilidade para mudança de cidade ou estado</p></li>
+			<li><p>Disponibilidade para mudança de cidade ou estado.</p></li>
+			<li><p>Moradia disponível na cidade de São Paulo.</p></li>
 		</ul>
 	</div>
 </body>
