--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<h2>Informações adicionais</h2>
 		<ul>
 			<li><p>Disponibilidade para mudança de cidade ou estado.</p></li>
-			<li><p>Moradia disponível na cidade de São Paulo.</p></li>
+			<li><p>Moradia disponível na cidade de São Paulo: Rua Heitor Penteado, 1832. Apto 1002 B, Sumarezinho</p></li>
 		</ul>
 	</div>
 </body>
