--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<div class="wrapper">
 		<h1>Vinicius Saran Nascimento</h1>
 		<p>Brasileiro, solteiro, 22 anos.</p>
-		<address>Avenida Francisco Jesualdi, 188. <br>
-		Poços de Caldas - MG.</address>
+		<address>Rua Jacacatiá, 859, Jardim Umarizal <br>
+		São Paulo - SP.</address>
 		<p>E-mail: viniciussaran@gmail.com.</p>
 
 		<h2>Objetivo</h2>
@@ -26,7 +26,12 @@
 		<h2>Experiência Profissional</h2>
 		<ul class="professional-experience">
 			<li>
-				<h3>2014-Atualmente - NGA Corp</h3>
+				<h3>Outubro 2014-Atualmente - Presença Online</h3>
+				<p>Cargo: Desenvolvedor Front-End.</p>
+				<p>Principais atividades: Desenvolvimento Front-End de portais, landing-pages e promoções utilizando HTML, CSS + Sass, JavaScript/JQuery e Twitter Bootrap + Sass</p>
+			</li>
+			<li>
+				<h3>Janeiro 2014-Setembro 2014 - NGA Corp</h3>
 				<p>Cargo: Desenvolvedor Web.</p>
 				<p>Principais atividades: Desenvolvimento de aplicativos Cross-Platform e sistemas Web utilizando as tecnologias HTML/HTML5, CSS/CSS3, Javascript/JQuery, Ajax, PHP e MySQL. Photoshop e Fireworks para recorte de imagens e medidas.</p>
 			</li>
@@ -46,9 +51,11 @@
 		<h2>Qualificações e Atividades Complementares</h2>
 		<ul>
 			<li><p>Experiência em HTML/HTML5, CSS/CSS3, Javascript/JQuery, PHP, MySQL, design
-				responsivo, semântica, cross-browser, Twitter Bootstrap, mobile apps.</p></li>
+				responsivo, semântica, cross-browser, mobile apps.</p></li>
+			<li><p>Conhecimento avançado em Twitter Bootstrap + Sass</p></li>
+			<li><p>Utilzação de metodologias atuais na escrita do CSS: DRY, BEM, OOCSS, SMACSS</p></li>
 			<li><p>Photoshop e Fireworks para recorte.</p></li>
-			<li><p>Antenado nas tecnologias Front-End: AngularJS, Bower, Yeoman, Grunt.</p></li>
+			<li><p>Antenado nas tecnologias Front-End: AngularJS, Bower, Yeoman, Grunt, Gulp</p></li>
 			<li><p>Bom conhecimento em Sass/Less.</p></li>
 			<li><p>Inglês avançado.</p></li>
 			<li><p>Participação em três maratonas regionais de programação(ACM-ICPC), representando a universidade.</p></li>
@@ -57,7 +64,6 @@
 		<h2>Informações adicionais</h2>
 		<ul>
 			<li><p>Disponibilidade para mudança de cidade ou estado.</p></li>
-			<li><p>Moradia disponível na cidade de São Paulo: Rua Heitor Penteado, 1832. Apto 1002 B, Sumarezinho.</p></li>
 		</ul>
 	</div>
 </body>
