--- a/index.html
+++ b/index.html
@@ -53,12 +53,10 @@
 			<li><p>Experiência em HTML/HTML5, CSS/CSS3, Javascript/JQuery, PHP, MySQL, design
 				responsivo, semântica, cross-browser, mobile apps.</p></li>
 			<li><p>Conhecimento avançado em Twitter Bootstrap + Sass</p></li>
-			<li><p>Utilzação de metodologias atuais na escrita do CSS: DRY, BEM, OOCSS, SMACSS</p></li>
+			<li><p>Utilzação de metodologias atuais para escrita e organização do CSS: DRY, BEM, OOCSS, SMACSS</p></li>
 			<li><p>Photoshop e Fireworks para recorte.</p></li>
 			<li><p>Antenado nas tecnologias Front-End: AngularJS, Bower, Yeoman, Grunt, Gulp</p></li>
-			<li><p>Bom conhecimento em Sass/Less.</p></li>
 			<li><p>Inglês avançado.</p></li>
-			<li><p>Participação em três maratonas regionais de programação(ACM-ICPC), representando a universidade.</p></li>
 		</ul>
 
 		<h2>Informações adicionais</h2>
