--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<li>
 				<h3>Outubro 2014-Atualmente - Presença Online</h3>
 				<p>Cargo: Desenvolvedor Front-End.</p>
-				<p>Principais atividades: Desenvolvimento Front-End de portais, landing-pages e promoções utilizando HTML, CSS + Sass, JavaScript/JQuery e Twitter Bootrap + Sass</p>
+				<p>Principais atividades: Desenvolvimento Front-End de portais, landing-pages e promoções utilizando HTML, CSS + Sass, JavaScript/JQuery e Twitter Bootrap + Sass.</p>
 			</li>
 			<li>
 				<h3>Janeiro 2014-Setembro 2014 - NGA Corp</h3>
@@ -52,10 +52,10 @@
 		<ul>
 			<li><p>Experiência em HTML/HTML5, CSS/CSS3, Javascript/JQuery, PHP, MySQL, design
 				responsivo, semântica, cross-browser, mobile apps.</p></li>
-			<li><p>Conhecimento avançado em Twitter Bootstrap + Sass</p></li>
-			<li><p>Utilzação de metodologias atuais para escrita e organização do CSS: DRY, BEM, OOCSS, SMACSS</p></li>
+			<li><p>Conhecimento avançado em Twitter Bootstrap + Sass.</p></li>
+			<li><p>Utilzação de metodologias atuais para escrita e organização do CSS: DRY, BEM, OOCSS, SMACSS.</p></li>
 			<li><p>Photoshop e Fireworks para recorte.</p></li>
-			<li><p>Antenado nas tecnologias Front-End: AngularJS, Bower, Yeoman, Grunt, Gulp</p></li>
+			<li><p>Antenado nas tecnologias Front-End: AngularJS, Bower, Yeoman, Grunt, Gulp.</p></li>
 			<li><p>Inglês avançado.</p></li>
 		</ul>
 
