--- a/index.html
+++ b/index.html
@@ -41,17 +41,14 @@
 				<p>Principais atividades: Desenvolvimento de softwares para a universidade, utilizando as metodologias ágeis Scrum, Kanban e XP.</p>
 				<p>Principal projeto: sistema de gerenciamento de projetores multimídia.</p>
 			</li>
-			<li>
-				<h3>2011-2013 - EFAP(Escola de Formação e Aperfeiçoamento de Professores</h3>
-				<p>Cargo: Estagiário.</p>
-				<p>Principais atividades: Monirotamento de videoconferências, testes em equipamentos, instalação de softwares e configuração de rede cabeada e wireless em notebooks e desktops.</p>
-			</li>
 		</ul>
 
 		<h2>Qualificações e Atividades Complementares</h2>
 		<ul>
-			<li><p>Experiência em HTML/HTML5, CSS/CSS3, Javascript/JQuery, PHP, MySQL, design
-				responsivo, semântica, cross-browser, mobile apps.</p></li>
+			<li><p>Responsividade, semântica, cross-browser.</p></li>
+			<li><p>Git intermediário.</p></li>
+			<li><p>Sass/Less.</p></li>
+			<li><p>Wordpress e PHP intermediário.</p></li>
 			<li><p>Conhecimento avançado em Twitter Bootstrap + Sass.</p></li>
 			<li><p>Utilzação de metodologias atuais para escrita e organização do CSS: DRY, BEM, OOCSS, SMACSS.</p></li>
 			<li><p>Photoshop e Fireworks para recorte.</p></li>
@@ -61,6 +58,7 @@
 
 		<h2>Informações adicionais</h2>
 		<ul>
+			<li><p>Github: https://github.com/visaran</p></li>
 			<li><p>Disponibilidade para mudança de cidade ou estado.</p></li>
 		</ul>
 	</div>
