--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 		<h2>Formação</h2>
 		<ul>
-			<li><p>Sistemas de Informação, UNIFAE, conclusão em 2014.</p></li>
-			<li><p>Técnico em Informática, Centro Paula Souza, conclusão em 2009.</p></li>
+			<li>Sistemas de Informação, UNIFAE, conclusão em 2014.</li>
+			<li>Técnico em Informática, Centro Paula Souza, conclusão em 2009.</li>
 		</ul>
 
 		<h2>Experiência Profissional</h2>
@@ -45,21 +45,21 @@
 
 		<h2>Qualificações e Atividades Complementares</h2>
 		<ul>
-			<li><p>Responsividade, semântica, cross-browser.</p></li>
-			<li><p>Git intermediário.</p></li>
-			<li><p>Sass/Less.</p></li>
-			<li><p>Wordpress e PHP intermediário.</p></li>
-			<li><p>Conhecimento avançado em Twitter Bootstrap + Sass.</p></li>
-			<li><p>Utilzação de metodologias atuais para escrita e organização do CSS: DRY, BEM, OOCSS, SMACSS.</p></li>
-			<li><p>Photoshop e Fireworks para recorte.</p></li>
-			<li><p>Antenado nas tecnologias Front-End: AngularJS, Bower, Yeoman, Grunt, Gulp.</p></li>
-			<li><p>Inglês avançado.</p></li>
+			<li>Responsividade, semântica, cross-browser.</li>
+			<li>Git/SVN.</li>
+			<li>Sass/Less.</li>
+			<li>HTML para E-mail Marketing.</li>
+			<li>Conhecimento avançado em Twitter Bootstrap + Sass.</li>
+			<li>Utilzação de metodologias atuais para escrita e organização do CSS: DRY, BEM, OOCSS, SMACSS.</li>
+			<li>Photoshop e Fireworks para recorte.</li>
+			<li>Antenado nas tecnologias Front-End: AngularJS, Bower, Yeoman, Grunt, Gulp.</li>
+			<li>Inglês avançado.</li>
 		</ul>
 
 		<h2>Informações adicionais</h2>
 		<ul>
-			<li><p>Github: https://github.com/visaran</p></li>
-			<li><p>Disponibilidade para mudança de cidade ou estado.</p></li>
+			<li>Github: https://github.com/visaran</li>
+			<li>Disponibilidade para mudança de cidade ou estado.</li>
 		</ul>
 	</div>
 </body>
