--- a/index.html
+++ b/index.html
@@ -2,64 +2,62 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Currículo - Vinicius Saran Nascimento</title>
+	<title>Resume - Vinicius Saran Nascimento</title>
 
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 	<div class="wrapper">
 		<h1>Vinicius Saran Nascimento</h1>
-		<p>Brasileiro, solteiro, 23 anos.</p>
-		<address>Rua Jacacatiá, 859, Jardim Umarizal <br>
-		São Paulo - SP.</address>
+		<p>Brazilian, single, 23 year old.</p>
+		<address>595c South Circular Road, Dublin 8 </address>
 		<p>E-mail: viniciussaran@gmail.com.</p>
 
-		<h2>Objetivo</h2>
-		<p>Desenvolvedor Front-End</p>
+		<h2>Objective</h2>
+		<p>Front-End Developer</p>
 
 		<h2>Formação</h2>
 		<ul>
-			<li>Sistemas de Informação, UNIFAE, conclusão em 2014.</li>
-			<li>Técnico em Informática, Centro Paula Souza, conclusão em 2009.</li>
+			<li>Information Systems, UNIFAE, 2014.</li>
+			<li>Computor Technician, Centro Paula Souza, 2009.</li>
 		</ul>
 
-		<h2>Experiência Profissional</h2>
+		<h2>Professional Experience</h2>
 		<ul class="professional-experience">
 			<li>
-				<h3>Outubro 2014-Atualmente - Presença Online</h3>
-				<p>Cargo: Desenvolvedor Front-End.</p>
-				<p>Principais atividades: Desenvolvimento Front-End de portais, landing-pages e promoções utilizando HTML, CSS + Sass, JavaScript/JQuery e Twitter Bootrap + Sass.</p>
+				<h3>October 2014-September 2015 - Presença Online</h3>
+				<p>Role: Front-End Developer.</p>
+				<p>Main Activities: Front-End development for landing-pages and sales using HTML, CSS + Sass, JavaScript/JQuery and Twitter Bootrap + Sass.</p>
 			</li>
 			<li>
-				<h3>Janeiro 2014-Setembro 2014 - NGA Corp</h3>
-				<p>Cargo: Desenvolvedor Web.</p>
-				<p>Principais atividades: Desenvolvimento de aplicativos Cross-Platform e sistemas Web utilizando as tecnologias HTML/HTML5, CSS/CSS3, Javascript/JQuery, Ajax, PHP e MySQL. Photoshop e Fireworks para recorte de imagens e medidas.</p>
+				<h3>January 2014-September 2014 - NGA Corp</h3>
+				<p>Role: Web Developer.</p>
+				<p>Main Activities: Cross-Platform app development and web systems using HTML/HTML5, CSS/CSS3, Javascript/JQuery, Ajax, PHP and MySQL.</p>
 			</li>
 			<li>
-				<h3>Março 2013-Dezembro 2013 - Webgoal</h3>
-				<p>Cargo: Estagiário - Desenvolvedor Web.</p>
-				<p>Principais atividades: Desenvolvimento de softwares para a universidade, utilizando as metodologias ágeis Scrum, Kanban e XP.</p>
-				<p>Principal projeto: sistema de gerenciamento de projetores multimídia.</p>
+				<h3>March 2013-December 2013 - Webgoal</h3>
+				<p>Role: Trainee - Web Developer.</p>
+				<p>Main Activites: Software development for the college, using agile methodologies Scrum, Kanban e XP.</p>
 			</li>
 		</ul>
 
-		<h2>Qualificações e Atividades Complementares</h2>
+		<h2>Qualifications and Additional Activies</h2>
 		<ul>
-			<li>Responsividade, semântica, cross-browser.</li>
+			<li>Responsive, semantic, cross-browser.</li>
 			<li>Git/SVN.</li>
 			<li>Sass/Less.</li>
-			<li>HTML para E-mail Marketing.</li>
-			<li>Conhecimento avançado em Twitter Bootstrap + Sass.</li>
-			<li>Utilzação de metodologias atuais para escrita e organização do CSS: DRY, BEM, OOCSS, SMACSS.</li>
-			<li>Photoshop e Fireworks para recorte.</li>
-			<li>Antenado nas tecnologias Front-End: AngularJS, Bower, Yeoman, Grunt, Gulp.</li>
-			<li>Inglês avançado.</li>
+			<li>HTML for E-mail Marketing.</li>
+			<li>Advanced knowledge in Twitter Bootstrap + Sass.</li>
+			<li>Modern methodologies for CSS write and organization: DRY, BEM, OOCSS, SMACSS.</li>
+			<li>Photoshop and Fireworks for slice.</li>
+			<li>Tuned in Front-End technologies: AngularJS, React, Meteor, Bower, Yeoman, Grunt, Gulp.</li>
+			<li>Advanced English.</li>
 		</ul>
 
-		<h2>Informações adicionais</h2>
+		<h2>Extra informations</h2>
 		<ul>
 			<li>Github: https://github.com/visaran</li>
-			<li>Disponibilidade para mudança de cidade ou estado.</li>
+			<!--><li>Disponibilidade para mudança de cidade ou estado.</li><-->
 		</ul>
 	</div>
 </body>
