--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 		<h2>Objective</h2>
 		<p>Front-End Developer</p>
 
-		<h2>Formação</h2>
+		<h2>Education Background</h2>
 		<ul>
 			<li>Information Systems, UNIFAE, 2014.</li>
-			<li>Computor Technician, Centro Paula Souza, 2009.</li>
+			<li>Computer Technician, Centro Paula Souza, 2009.</li>
 		</ul>
 
 		<h2>Professional Experience</h2>
@@ -27,7 +27,7 @@
 			<li>
 				<h3>October 2014-September 2015 - Presença Online</h3>
 				<p>Role: Front-End Developer.</p>
-				<p>Main Activities: Front-End development for landing-pages and sales using HTML, CSS + Sass, JavaScript/JQuery and Twitter Bootrap + Sass.</p>
+				<p>Main Activities: Front-End development for landing-pages and sales pages using HTML, CSS + Sass, JavaScript/JQuery and Twitter Bootrap + Sass.</p>
 			</li>
 			<li>
 				<h3>January 2014-September 2014 - NGA Corp</h3>
@@ -50,7 +50,7 @@
 			<li>Advanced knowledge in Twitter Bootstrap + Sass.</li>
 			<li>Modern methodologies for CSS write and organization: DRY, BEM, OOCSS, SMACSS.</li>
 			<li>Photoshop and Fireworks for slice.</li>
-			<li>Tuned in Front-End technologies: AngularJS, React, Meteor, Bower, Yeoman, Grunt, Gulp.</li>
+			<li>Interested in Front-End technologies: AngularJS, React, Meteor, Bower, Yeoman, Grunt, Gulp.</li>
 			<li>Advanced English.</li>
 		</ul>
 
