--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<h2>Objective</h2>
 		<p>Front-End Developer</p>
 
-		<h2>Education Background</h2>
+		<h2>Educational Background</h2>
 		<ul>
 			<li>Information Systems, UNIFAE, 2014.</li>
 			<li>Computer Technician, Centro Paula Souza, 2009.</li>
