--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<h2>Extra informations</h2>
 		<ul>
 			<li>Github: https://github.com/visaran</li>
-			<!--><li>Disponibilidade para mudança de cidade ou estado.</li><-->
+			<li>Linkedin: https://ie.linkedin.com/in/viniciussaran</li>
 		</ul>
 	</div>
 </body>
