--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Resume - Vinicius Saran Nascimento</title>
+	<title>CV - Vinicius Saran Nascimento</title>
 
 	<link rel="stylesheet" href="styles.css">
 </head>
@@ -14,7 +14,7 @@
 		<p>E-mail: viniciussaran@gmail.com.</p>
 
 		<h2>Objective</h2>
-		<p>Front-End Developer</p>
+		<p>Front-End Developer(part-time)</p>
 
 		<h2>Educational Background</h2>
 		<ul>
