--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<li>
 				<h3>October 2014-September 2015 - Presença Online</h3>
 				<p>Role: Front-End Developer.</p>
-				<p>Main Activities: Front-End development for landing-pages and sales pages using HTML, CSS + Sass, JavaScript/JQuery and Twitter Bootrap + Sass.</p>
+				<p>Main Activities: Front-End development for landing-pages and sales pages using HTML, CSS + Sass, WordPress, JavaScript/JQuery and Twitter Bootrap + Sass.</p>
 			</li>
 			<li>
 				<h3>January 2014-September 2014 - NGA Corp</h3>
@@ -44,6 +44,7 @@
 		<h2>Qualifications and Additional Activies</h2>
 		<ul>
 			<li>Responsive, semantic, cross-browser.</li>
+			<li>WordPress.</li>
 			<li>Git/SVN.</li>
 			<li>Sass/Less.</li>
 			<li>HTML for E-mail Marketing.</li>
