--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
 	<div class="wrapper">
 		<h1>Vinicius Saran Nascimento</h1>
-		<p>Brazilian, single, 23 year old.</p>
+		<p>Brazilian, single, 23 year old</p>
 		<address>595c South Circular Road, Dublin 8 </address>
-		<p>E-mail: viniciussaran@gmail.com.</p>
-		<p>Mobile: 0899413672.</p>
+		<p>E-mail: viniciussaran@gmail.com</p>
+		<p>Mobile: 0899413672</p>
 
 		<h2>Objective</h2>
 		<p>Front-End Developer(part-time)</p>
