--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
 		<h2>Extra informations</h2>
 		<ul>
+			<li>Stamp 2/Student Visa</li>
 			<li>Github: https://github.com/visaran</li>
 			<li>Linkedin: https://ie.linkedin.com/in/viniciussaran</li>
 		</ul>
