--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<p>Mobile: +353 899413672</p>
 
 		<h2>Objective</h2>
-		<p>Front-End Developer</p>
+		<p>Web Developer</p>
 
 		<h2>Educational Background</h2>
 		<ul>
