--- a/index.html
+++ b/index.html
@@ -44,16 +44,14 @@
 
 		<h2>Qualifications and Additional Activies</h2>
 		<ul>
-			<li>Responsive, semantic, cross-browser.</li>
+			<li>Good knowledge in Angular/React.</li>
 			<li>WordPress.</li>
 			<li>Git/SVN.</li>
 			<li>Sass/Less.</li>
 			<li>HTML for E-mail Marketing.</li>
-			<li>Advanced knowledge in Twitter Bootstrap + Sass.</li>
+			<li>CSS Frameworks.</li>
 			<li>Modern methodologies for CSS write and organization: DRY, BEM, OOCSS, SMACSS.</li>
-			<li>Photoshop and Fireworks for slice.</li>
-			<li>Interested in Front-End technologies: AngularJS, React, Meteor, Bower, Yeoman, Grunt, Gulp.</li>
-			<li>Advanced English.</li>
+			<li>Photoshop and Fireworks for slicing.</li>
 		</ul>
 
 		<h2>Extra informations</h2>
@@ -61,6 +59,7 @@
 			<li>Stamp 2/Student Visa</li>
 			<li>Github: https://github.com/visaran</li>
 			<li>Linkedin: https://ie.linkedin.com/in/viniciussaran</li>
+			<li>Advanced English.</li>
 		</ul>
 	</div>
 </body>
